Fix: 关于按钮的错误

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
             <ul class="navigation">
               <li class="navigation__item"><a href="{{ site.baseurl }}#blog" title="link to {{ site.title }} blog" class="blog-button">主页</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}tags" title="标签" class="blog-button">标签</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}About" title="关于我" class="blog-button">关于</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}about" title="关于我" class="blog-button">关于</a></li>
             </ul>
           </nav>
 
