--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,5 +12,6 @@
 
       {% include footer.html %}
     </div>
+    <script type="text/javascript" src="http://tajs.qq.com/stats?sId=56525424" charset="UTF-8"></script>
   </body>
 </html>
