--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <span class="footer__copyright">Copyright &copy; {{ site.author.name }} {{ site.time | date: '%Y' }}<br/><br/>Theme: Jekyll-Uno by Josh Gerdes</span>
+  <span class="footer__copyright">Copyright &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. All Rights Reserved.<br/><br/>Powered by Jekyll. <br/><br/>Theme: Jekyll-Uno by Josh Gerdes</span>
 </footer> 
 
 <script type="text/javascript" src="{{ "js/jquery.min.js" | prepend: site.baseurl }}"></script>
