--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
             {% if site.author.qq %}
               <!-- QQ -->
               <li class="navigation__item">
-                <a href="/About/#contact" title="QQ:919446762 微信:iFanze">
+                <a href="/about/#contact" title="QQ:919446762 微信:iFanze">
                   <i class="fa fa-qq" aria-hidden="true"></i>
                   <span class="label">QQ</span>
                 </a>
